ItemPicker: Fixed spacing for small devices

--- a/Components/Item/ItemPicker.razor.css
+++ b/Components/Item/ItemPicker.razor.css
@@ -1,9 +1,12 @@
 .item-list {
     grid-template-columns: repeat(auto-fit, 80px);
-    width: calc((80px + 0.65rem) * 4);
+    /* width: calc((80px + 0.5rem) * 4 + 1.875rem); */
+    width: 375px;
     max-width: 100%;
     min-height: 185px;
     max-height: calc(95dvh - 140px);
+    padding-left: 0.9375rem;
+    padding-right: 0.9375rem;
 }
 
 .search-icon {
